# BurninG

./: .gitignore  CMakeLists.txt  asyncAPI.cu  config.ini  mongoandcuda.cpp  mongoandcuda.h
src/: main.cpp
src/config/: config.h
